recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:11: error: reassignment to val
    steps = steps + 1
          ^Tree:12: error: reassignment to val
    length = l*(shrink**(nb-steps))
           ^