recursion.logo.lessons.recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  var l:Double = length
  var nb:Int = steps
  if (steps!=0) {
    current(steps)
    avance(length)
    droite(angle)
    tree(steps-1, length*shrink, angle, shrink)
    gauche(angle)
    recule(length)
    steps = steps + 1
    length = l*(shrink**(nb-steps))
    gauche(2*angle)
    tree(steps-1, length, angle, shrink)
	}
}